css/index.css
.search-bar {
    margin-bottom: 20px;
    background-color: var(--global-contrast-inverse);
    text-align: center;
    position: relative;
    font-family: "Inter", sans-serif;
}

.search-bar input {
    border: none;
    background: url("../assets/icons/search.svg") no-repeat 10px center;
    background-color: var(--global-contrast-inverse);
    font-size: 0.8rem;
    line-height: 0.5rem;
    margin: 0.9rem 0;
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
    border-radius: 6px;
    width: 50%;
    padding-left: 2.5rem;
    height: 2rem;
}

.suggestions {
    position: absolute;
    top: 100%;
    width: 50%;
    left: 25%;
    background-color: #fff;
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
    border-top: none;
    border-radius: 6px;
    max-height: 250px;
    overflow-y: auto;
    display: block;
    z-index: 1000;
}

.suggestion-item {
    padding: 7px 10px;
    text-align: left;
    cursor: pointer;
    font-size: small;
    display: flex;
    align-items: center;
}

.suggestion-item img {
    width: 30px;
    height: 40px;
    object-fit: cover;
    border-radius: 4px;
    margin-right: 0.5rem;
}

.text span {
    font-weight: 600;
}

.suggestion-item:hover {
    background-color: #f0f0f0;
}

@media screen and (max-width: 700px) {
    .search-bar input {
        background: url("../assets/icons/search.svg") no-repeat 10px center;
        background-size: 20px 20px;
        width: 80%;
        background-color: var(--global-contrast-inverse);
    }
    .search-bar {
        background: none;
    }
}

.recommended-section {
    margin-bottom: 40px;
    margin: 50px;
}

.book-grid {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
    gap: 20px;
    align-items: end;
}

.book-card {
    cursor: pointer;
}

.book-card:hover {
    transform: scale(1.02);
    transition: transform 0.3s;
}

.book-card img {
    height: 100%;
    width: auto;
    object-fit: cover;
    border-radius: 5px;
}

@media (max-width: 900px) {
    .book-grid {
        grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
    }
}

.carousel {
    padding: 10px 0;
    max-width: 100%;
    overflow: hidden;
    display: flex;

    &:hover .group {
        animation-play-state: paused;
    }
}

.card {
    width: 200px;
    display: flex;
    align-items: flex-end;
}

.group {
    display: flex;
    gap: 20px;
    padding-right: 20px;
    will-change: transform;
    animation: scrolling 10s linear infinite;
}

@keyframes scrolling {
    0% {
        transform: translateX(0);
    }

    100% {
        transform: translateX(-100%);
    }
}

@media (max-width: 900px) {
    .carousel {
        display: none;
    }
}

@media (min-width: 900px) {
    .book-grid {
        display: none;
    }
}

/* New Arrivals */

.new-arrivals {
    margin: 50px;
}

.book-table {
    background-color: white;
    border-radius: 10px;
    overflow: hidden;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    font-size: 0.8rem;
}

.book-table table {
    width: 100%;
    border-collapse: separate;
    border-spacing: 0;
    margin-bottom: 0;
}

.book-table th,
.book-table td {
    padding: 15px;
    text-align: left;
}

.book-table th {
    background-color: var(--global-contrast-inverse);
    font-weight: 600;
    border-bottom: 1px solid #dee2e6;
}

.book-table td {
    border-bottom: 1px solid #dee2e6;
    background-color: var(--global-contrast-inverse);
    font-family: "Inter", sans-serif;
}

.book-table a {
    color: var(--global-primary);
    text-decoration: underline;
    font-weight: 600;
}

.book-table a:hover {
    color: var(--global-secondary);
}

.book-table td:first-child {
    font-weight: 600;
}

.book-table tr:last-child td {
    border-bottom: none;
}

.book-cover {
    width: 40px;
    height: 60px;
    object-fit: cover;
    border-radius: 4px;
    margin-right: 0.3rem;
}

.genre-tag {
    display: inline-block;
    padding: 2px 8px;
    border-radius: 12px;
    font-size: 12px;
}

.mystery {
    background-color: #fff3cd;
    color: #856404;
}

.fiction {
    background-color: #d4edda;
    color: #155724;
}

.biographic {
    background-color: #e2e3ff;
    color: #3d3d8f;
}

.romance {
    background-color: #f8d7da;
    color: #721c24;
}

.classic {
    background-color: #cce5ff;
    color: #004085;
}

.action {
    background-color: #d6d8d9;
    color: #383d41;
}

.fantasy {
    background-color: #d1ecf1;
    color: #0c5460;
}

.thriller {
    background-color: #f8d7da;
    color: #721c24;
}

.dystopian {
    background-color: #f8e7d7;
    color: #723d1c;
}

@media screen and (max-width: 900px) {
    .genre,
    .author {
        display: none;
    }
}

